--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,11 @@
   text-align: center;
   width: 100%;
   color: black;
+  line-height: 1.7;
 }
 
 body {
-  background-color: black;
+  background-color: rgb(62, 62, 62);
 }
 
 .waveform-container {
@@ -20,7 +21,11 @@ body {
   background-color: black;
   padding: 3rem;
   border-radius: 2rem;
-  border: 2px solid lightgreen;
+  border: 2px solid white;
+  box-shadow: 
+  10px 10px 0 0 rgba(255, 0, 0, 0.7), /* Red shadow */
+  20px 20px 0 0 rgba(0, 255, 0, 0.7), /* Green shadow */
+  30px 30px 0 0 rgba(0, 0, 255, 0.7); /* Blue shadow */
 }
 
 #waveform {
@@ -31,7 +36,7 @@ body {
 }
 
 .controls {
-  margin-top: 10px;
+  margin-top: 1.5rem;
 }
 
 .controls button {
@@ -57,9 +62,10 @@ body {
 }
 
 .audio-info {
-  margin-top: 15px;
+  margin-top: 1.5rem;
   color: #fff;
   border-radius: 4px;
+  
   padding: 8px 15px;
   display: inline-block;
   font-size: large;
@@ -71,7 +77,7 @@ body {
   flex-direction: column;
   width: 70%;
   aspect-ratio: 1.1;
-  margin: 2rem auto;
+  margin: 3rem auto;
   padding: 1rem;
   font-size: x-large;
   color: lightblue;
