--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ body {
   flex-direction: column;
   width: 70%;
   aspect-ratio: 1.1;
-  margin: 3rem auto;
+  margin: 1.5rem auto 3rem;
   padding: 1rem;
   font-size: x-large;
   color: lightblue;
