--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,10 @@ body {
   padding: 3rem;
   border-radius: 2rem;
   border: 2px solid white;
-  box-shadow: 
-  12px 12px 0 0 rgba(255, 0, 0, 0.7), /* Red shadow */
-  22px 22px 0 0 rgba(0, 255, 0, 0.7), /* Green shadow */
-  32px 32px 0 0 rgba(0, 0, 255, 0.7); /* Blue shadow */
+  box-shadow:
+    12px 12px 0 0 rgba(255, 0, 0, 0.7),
+    22px 22px 0 0 rgba(0, 255, 0, 0.7),
+    32px 32px 0 0 rgba(0, 0, 255, 0.7);
 }
 
 #waveform {
@@ -37,7 +37,11 @@ body {
 
 .controls {
   margin-top: 1.5rem;
+  display: flex; /* Align children in a row */
+  justify-content: center; /* Center items horizontally */
+  align-items: center; /* Align items vertically in the center */
 }
+
 
 .controls button {
   width: 2.5rem;
@@ -65,7 +69,7 @@ body {
   margin-top: 1.5rem;
   color: #fff;
   border-radius: 4px;
-  
+
   padding: 8px 15px;
   display: inline-block;
   font-size: large;
@@ -79,11 +83,56 @@ body {
   aspect-ratio: 1.1;
   margin: 1.5rem auto 3rem;
   padding: 1rem;
-  font-size: x-large;
+  font-size: medium;
   color: lightblue;
   border: 1px dashed lightblue;
+}
+.drop-zone:hover {
+  background-color: rgba(82, 82, 82, 0.3);
 }
 .upload-icon {
   font-size: 5rem;
   margin: auto auto;
+}
+
+.slider-container {
+  position: relative;
+  width: 40%; /* Adjust based on your design preference */
+  margin: 0 1rem; /* Optional: adds space around the slider */
+}
+
+
+.slider-track {
+  position: absolute;
+  height: 0.5rem;
+  background-color: blue;
+  top: 57%;
+  transform: translateY(-50%);
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 4px;
+  background: gray;
+  outline: none;
+  
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0.75rem;
+  height: 2rem;
+  background: blue;
+  cursor: pointer;
+  border-radius: 10%;
+}
+
+.slider::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: blue;
+  cursor: pointer;
+  border-radius: 50%;
 }
