--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   width: 100%;
   color: black;
   line-height: 1.7;
+  font-family: monospace, 'Courier New', Courier;
 }
 
 body {
@@ -16,16 +17,38 @@ body {
   width: 50%;
   max-width: 25rem;
   height: 100%;
-  margin: 10rem auto;
+  margin: 1rem auto;
   display: block;
   background-color: black;
-  padding: 3rem;
+  padding: 2rem 3rem;
   border-radius: 2rem;
-  border: 2px solid white;
+  border: 2px solid gray;
   box-shadow:
-    12px 12px 0 0 rgba(255, 0, 0, 0.7),
+    12px 12px 0 0 rgba(0, 0, 255, 0.7),
     22px 22px 0 0 rgba(0, 255, 0, 0.7),
-    32px 32px 0 0 rgba(0, 0, 255, 0.7);
+    32px 32px 0 0 rgba(255, 0, 0, 0.7);
+}
+
+.title {
+  color: black;
+  font-size: xxx-large;
+
+  font-weight: bold;
+  text-shadow:
+    -1px -1px 0 gray,
+    1px -1px 0 gray,
+    -1px 1px 0 gray,
+    1px 1px 0 gray,
+    3px 3px 0 rgba(0, 0, 255, 0.7),
+    5px 5px 0 rgba(0, 255, 0, 0.7),
+    7px 7px 0 rgba(255, 0, 0, 0.7);
+}
+
+.dropdown-selector select {
+  width: 60%;
+  margin: 1rem auto 1.3rem;
+  font-size: large;
+  
 }
 
 #waveform {
@@ -37,11 +60,11 @@ body {
 
 .controls {
   margin-top: 1.5rem;
-  display: flex; /* Align children in a row */
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Align items vertically in the center */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid white; */
 }
-
 
 .controls button {
   width: 2.5rem;
@@ -64,24 +87,70 @@ body {
 .controls input {
   cursor: pointer;
 }
+.slider-container {
+  position: relative;
+  width: 40%; /* Adjust based on your design preference */
+  margin: 0 1rem; /* Optional: adds space around the slider */
+  color: white;
+  padding-bottom: 1.6rem;
+  font-size: small;
+  /* border: 1px solid white; */
+}
+
+.slider-track {
+  position: absolute;
+  height: 0.5rem;
+  background-color: none;
+  top: 50%;
+  transform: translateY(-50%);
+  
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 4px;
+  background: gray;
+  outline: none;
+
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  background: white;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.slider::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  background: blue;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
 
 .audio-info {
-  margin-top: 1.5rem;
   color: #fff;
   border-radius: 4px;
-
-  padding: 8px 15px;
+  padding: px 15px;
   display: inline-block;
-  font-size: large;
+  font-size: small;
   cursor: default;
 }
+
+
 .drop-zone {
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 60%;
   aspect-ratio: 1.1;
-  margin: 1.5rem auto 3rem;
+  margin: 2rem auto 1rem;
   padding: 1rem;
   font-size: medium;
   color: lightblue;
@@ -95,44 +164,3 @@ body {
   margin: auto auto;
 }
 
-.slider-container {
-  position: relative;
-  width: 40%; /* Adjust based on your design preference */
-  margin: 0 1rem; /* Optional: adds space around the slider */
-}
-
-
-.slider-track {
-  position: absolute;
-  height: 0.5rem;
-  background-color: blue;
-  top: 57%;
-  transform: translateY(-50%);
-}
-
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 4px;
-  background: gray;
-  outline: none;
-  
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 0.75rem;
-  height: 2rem;
-  background: blue;
-  cursor: pointer;
-  border-radius: 10%;
-}
-
-.slider::-moz-range-thumb {
-  width: 15px;
-  height: 15px;
-  background: blue;
-  cursor: pointer;
-  border-radius: 50%;
-}
